add an index file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en-us"
+<html lang="en-us">
     <head>
         <title>My First Web Page</title>   
     </head>
     <body>
         <h1>Language I know</h1>
-        <o1>
+        <u1>
             <li> English</li>
             <li> Amharic</li>
-        </o1>
-    </body>
+        </u1>
+    </body> 
+</html>
