--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>My First Web Page</title>   
     </head>
     <body>
-        <h1>Language I know</h1>
+        <h1>Languages I know</h1>
         <u1>
             <li> English</li>
             <li> Amharic</li>
